--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<button *ngIf="isLogin" (click)="test()" routerLink="login">login</button>
-<button (click)="test2()" >logout</button>
+<button *ngIf="isLogin" (click)="login()" routerLink="login">login</button>
+<button (click)="logout()" >logout</button>
 <router-outlet></router-outlet>
